Overlapping rates fix for ie11

--- a/_sass/_conversion-plus.scss
+++ b/_sass/_conversion-plus.scss
@@ -108,3 +108,16 @@
       } /* IE11 */
    }
 }
+
+.ttweb-ota-rate-table {
+
+  &__row {
+    justify-content: center;
+    width: 120px;
+  }
+
+  &__label {
+    flex: none;
+  }
+
+}
